--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         run: |
-          docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -t $ECR_REGISTRY/$ECR_REPOSITORY:$GIT_COMMIT
+          docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -t $ECR_REGISTRY/$ECR_REPOSITORY:$GIT_COMMIT -f dockerfile.prod
           docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GIT_COMMIT"
 
