--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -21,6 +21,7 @@ ENV URL https://admin.pet-gpt.com
 ENV FRONTEND_URL https://pet-gpt.com
 ENV DATABASE_HOST petgpt.cby2xvm9mdjq.ap-northeast-2.rds.amazonaws.com
 ENV DATABASE_PASSWORD dfggv#QhVv4^SZ!
+ENV DATABASE_NAME petgpt
 ENV PORT 80
 
 WORKDIR /app
